--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -23,6 +23,7 @@
 
 .login-btn-div {
     text-align: right;
+    align-self: center;
 }
 
 .login-form input {
@@ -49,10 +50,64 @@
     outline: none;
 }
 
+.login-footer {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
 .login-btn:hover {
     box-shadow: 0px 1px 3px #0000000d inset, 0px 0px 15px #32353899;
 }
 
 .login-btn:active {
     background-color: #353131cc;
+}
+
+.login-message {
+    align-self: center;
+    text-align: center;
+    color: red;
+    font-size: 12px;
+}
+
+.shake {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
 }
