--- a/client/src/components/userlist/userlist.css
+++ b/client/src/components/userlist/userlist.css
@@ -1,5 +1,101 @@
+.UserList * {
+    box-sizing: border-box;
+}
+
 .UserList {
     display: grid;
-    grid-template-columns: 60% 40%;
+    /* grid-template-columns: auto 35px 300px; */
+    grid-template-columns: 1fr 35px auto;
     margin-top: 10px;
+}
+
+.userlist-buttons .button {
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    line-height: normal;
+    border-radius: 2px;
+    outline: none;
+    background: none;
+    position: relative;
+}
+
+.userlist-buttons .button .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: #1f1e1e;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    right: 120%;
+    font-size: 12px;
+}
+
+.userlist-buttons .button .tooltip-text::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent black;
+}
+
+.userlist-buttons .button:hover .tooltip-text {
+    visibility: visible;
+}
+
+.userlist-buttons .button:active {
+    margin-top: 2px;
+}
+
+.userlist-buttons .buttons img {
+    width: 100%;
+    height: 100%;
+}
+
+.userlist-buttons {
+    display: grid;
+    grid-template-rows: 35px 35px 1fr 35px 35px;
+    text-align: center;
+}
+
+.UserList-form {
+    width: 350px;
+}
+
+.hidden {
+    display: none;
+}
+
+.arrow-right {
+    border-left: 10px solid #1f1e1e;
+    margin: 0px auto;
+}
+
+.arrow-left {
+    border-right: 10px solid #1f1e1e;
+    margin: 0px auto;
+}
+
+.arrow {
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    width: 0;
+    height: 0;
+}
+
+.arrow:hover {
+    cursor: pointer;
+}
+
+.arrow:active {
+    margin-top: 2px;
 }
