--- a/client/src/components/createuser/createuser.css
+++ b/client/src/components/createuser/createuser.css
@@ -72,3 +72,26 @@ select:focus {
     font-weight: bold;
     color: black;
 }
+
+.create-user-form label {
+    position: relative;
+}
+
+.Create-User .tooltip-text {
+    color: red;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    top: 5px;
+    left: 277px;
+    font-size: 10px;
+}
+
+.Create-User .hidden {
+    visibility: hidden;
+}
+
+.Create-User label[for="conf_password"]>span {
+    left: 183px;
+    width: 165px;
+}
