--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -47,6 +47,16 @@
     text-align: left;
 }
 
+.name {
+    width:150px;
+    height:50px;
+}
+
+.logo {
+    width:50px;
+    height:50px;
+}
+
 .header-logo-text {
     width: 25px;
     opacity: .85;
